Fix overflow

--- a/Versione_1/assets/style.css
+++ b/Versione_1/assets/style.css
@@ -16,6 +16,8 @@
     background-color: #1e2d3b;
     height: 100vh;
     padding: 100px;
+    overflow: auto;
+    display: hidden;
 }
 
 .container
